--- a/web/index.html
+++ b/web/index.html
@@ -2,6 +2,8 @@
 <html lang="" data-bs-theme="dark">
   <head>
     <meta charset="UTF-8" />
+    <!-- reset.css -->
+    <link href="https://meyerweb.com/eric/tools/css/reset/reset.css" rel="stylesheet" />
     <!-- Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
